# rust_file_uploader

./: Cargo.toml  Dockerfile  README.md  api-spec.yaml  compose.yaml
src/: main.rs  models.rs  rejections.rs  test.rs
