[package]
name = "file-upload-server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
futures-util = "0.3.30"
bytes = "1"
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.87"